# geo_task

./: .env.template  .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml  vector.toml
grafana/provisioning/datasources/: loki.yml
src/: __main__.py  config.py
src/business_logic/common/: constants.py  exceptions.py  validators.py
src/business_logic/task/: access_policy.py
src/business_logic/task/dto/: task.py  task_application.py  user.py
src/business_logic/task/entities/: task.py  task_application.py  user.py
src/business_logic/task/exceptions/: task.py  task_application.py
src/business_logic/task/protocols/: repository.py  uow.py
src/business_logic/task/services/: task_application.py  task_service.py
src/business_logic/task/validators/: task.py  task_application.py  validators.py
src/business_logic/user/dto/: auth.py
src/business_logic/user/entities/: user.py
src/business_logic/user/exceptions/: auth.py  user.py
src/business_logic/user/protocols/: repository.py  security.py  uow.py
src/business_logic/user/services/: auth_service.py
src/business_logic/user/validators/: password.py  validators.py
src/commands/: import_cities.py
src/data_access/postgresql/: base.py
src/data_access/postgresql/migrations/: env.py
src/data_access/postgresql/models/: __init__.py  base.py  user.py
src/data_access/postgresql/tables/: user.py
src/infrastructure/data_access/postgresql/: db.py  uow.py
src/infrastructure/data_access/postgresql/migrations/: env.py
src/infrastructure/data_access/postgresql/migrations/versions/: 1375e7cdf402_user_and_task_model.py  475c9c62a749_city_table.py  4b486e9de62d_task_user_id.py  4f086789b675_first_name_required.py  6be2343ef608_task_application.py  76c1e690382a_city_table.py  7d4a5d2d00ef_task_city_name.py  8ce4ccff698e_user_model.py  8e36def7b0a1_user_model.py  c8dc46aea465_user_model.py  d1921a934373_ondelete_cascade_task_application.py  f8207636baf4_remove_lat_long.py
src/infrastructure/data_access/postgresql/repositories/: base.py  task.py  task_application.py  user.py
src/infrastructure/data_access/postgresql/tables/: __init__.py  city.py  mappers.py  monkey_patch_geo.py  task.py  task_application.py  user.py
src/infrastructure/logger/: logger_config.py  main.py
src/infrastructure/managers/: hash_manager.py  jwt_manager.py
src/presentation/api/: app.py  depends_stub.py  exception_handler.py
src/presentation/api/openapi_responses/: common.py  generator.py
src/presentation/api/openapi_responses/v1/: task.py  task_application.py  user.py
src/presentation/api/v1/: depends.py  routers.py
src/presentation/api/v1/task/: __init__.py  task.py  task_application.py
src/presentation/api/v1/user/: __init__.py  auth.py
src/presentation/schemas/: common.py  exceptions.py  task.py
